terraform-aws-ec2-vaultwarden/modules/network/igw.tf
resource "aws_internet_gateway" "this" {
  vpc_id = aws_vpc.this.id
  tags = {
    Name = "vaultwarden-${var.environment}-igw"
  }
}
