terraform-aws-ec2-vaultwarden/modules/network/main.tf
resource "aws_vpc" "this" {

  cidr_block           = var.vpc_cidr_block
  enable_dns_support   = true
  enable_dns_hostnames = true
  tags = {
    Name = "vaultwarden-${var.environment}-vpc"
  }
}
